<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CoinPay</string>
    <string name="action_settings">Settings</string>
    <string name="title_account">资产</string>
    <string name="title_market_detail">详情</string>
    <string name="title_setting">设置</string>
    <string name="add_account">添加钱包</string>
    <string name="create_account">创建钱包</string>
    <string name="import_account">导入钱包</string>
    <string name="cointype_choose">选择币种</string>
    <string name="create_account_title">创建<xliff:g id="coin_name">%s</xliff:g>钱包</string>
    <string name="coin_type_title">币种类</string>
    <string name="account_custome_name">钱包名称</string>
    <string name="account_custome_name_hint">钱包名称（至多20个字符）</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_hint">请输入密码（至少6位）</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_hint">重复密码</string>
    <string name="create_address_success">地址创建成功</string>
    <string name="create_address_failed">地址创建失败</string>
    <string name="create_address_failed_accountname_same">钱包名称已经被使用</string>
    <string name="create_address_failed_address_exist">账户已经存在</string>
    <string name="mnemonic">助记词</string>
    <string name="key">密钥</string>
    <string name="input_mnemonic_hint">请依序输入助记词并以空格分开各个单词</string>
    <string name="mnemonic_style">助记词格式</string>
    <string name="input_key_hint">请输入私钥</string>
    <string name="blank_key">私钥为空，无法导入</string>
    <string name="blank_keystore">Keystore为空，无法导入</string>
    <string name="blank_keystore_password">Keystore密码为空，无法导入</string>
    <string name="import_address_success">地址导入成功</string>
    <string name="import_address_failed">地址导入失败</string>
    <string name="send_out_transaction">转账</string>
    <string name="receipt_transaction">收款</string>
    <string name="manage_account">管理钱包</string>
    <string name="delete_account">删除钱包</string>
    <string name="finish">完成</string>
    <string name="copy">复制</string>
    <string name="see_mnemonic">查看密语</string>
    <string name="see_key">查看密钥</string>
    <string name="password_check_error">密码错误，请检查</string>
    <string name="password_error_blank">密码为空,不能创建地址</string>
    <string name="password_error_not_the_same">两次输入的密码不符</string>
    <string name="password_error_short">密码长度太短,不能创建地址</string>
    <string name="account_name_error">账户名不符合要求</string>
    <string name="all_balance_title">总资产</string>
    <string name="not_backup_warn">未备份钱包存在风险，请立即备份</string>
    <string name="send_to_address">address</string>
    <string name="keystore">KeyStore</string>
    <string name="input_keystore_hint">请输入KeyStore</string>
    <string name="no_money">暂无资产</string>
    <string name="all_money_will_show_here">全部资产将会在这里显示</string>
    <string name="manage_wallet">钱包管理</string>
    <string name="feedback">意见反馈</string>
    <string name="mark">评分</string>
    <string name="about">关于</string>
    <string name="transactions">交易记录</string>
    <string name="no_transaction">暂无交易记录</string>
    <string name="copy_address">复制地址</string>
    <string name="has_copied_address">地址已复制</string>
    <string name="coin_unit_eth">ETH</string>
    <string name="coin_unit_btc">BTC</string>
    <string name="all_balance_prefix">"<xliff:g id="unit">%s</xliff:g> <xliff:g id="value">%s</xliff:g>"</string>
    <string name="item_balance">"≈ <xliff:g id="unit">%s</xliff:g> <xliff:g id="value">%s</xliff:g>"</string>
    <string name="transfer_to_address">转账至</string>
    <string name="transfer_to_hint">请输入地址或扫描二维码</string>
    <string name="transfer_amount">转账额度</string>
    <string name="transfer_fee">手续费</string>
    <string name="cancel">取消</string>
    <string name="app_declare">我已经仔细阅读并同意</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="service_policy">服务协议</string>
    <string name="backup_rightnow">立即备份</string>
    <string name="remind_backup_title">请立即备份您的钱包</string>
    <string name="remind_backup_content1">我们强烈建议您在纸上写下助记词（备份词语），并将其保存在安全的地方。</string>
    <string name="note">注意</string>
    <string name="remind_backup_content2">助记词一旦遗失将无法复原。</string>
    <string name="remind_backup_content3">任何人取得您的助记词可访问该钱包或使用您的资产</string>
    <string name="backup">备份</string>
    <string name="backup_mnemonic_note1">请将下方显示的单词正确抄写在纸上，这些单词可以帮助恢复你的钱包</string>
    <string name="get_mnemonic">获取助记词</string>
    <string name="next_step">下一步</string>
    <string name="confirm_password_to_get_mnemonic">确认密码以获取助记词</string>
    <string name="check_password_error">错误密码</string>
    <string name="backup_confirm_mnemonic">确认你的助记词</string>
    <string name="clear_mnemonic">清除助记词</string>
    <string name="confirm">确认</string>
    <string name="backup_mnemonic_success">助记词备份成功</string>
    <string name="backup_mnemonic_failed">助记词顺序不对，请确认</string>
    <string name="transaction_detail">交易明细</string>
    <string name="transfer_from_address">转出地址</string>
    <string name="transfer_hash">转账号</string>
    <string name="blank_all_balance">"0.00"</string>
    <string name="blank_balance">≈ ¥ 0</string>
    <string name="input_keystore_password_hint">输入Keystore密码</string>
    <string name="please_backup">请备份</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="backup_key">备份密钥</string>
    <string name="backup_keystore">备份KeyStore</string>
    <string name="copy_ok">复制成功</string>
    <string name="copy_failed">复制失败</string>
    <string name="copy_key">复制密钥</string>
    <string name="copy_keystore">复制KeyStore</string>
    <string name="change_password">更改密码</string>
    <string name="confirm_delete_account">确认要删除钱包<xliff:g id="name">%s</xliff:g>吗？</string>
    <string name="delete_account_success">删除成功</string>
    <string name="delete_account_failed">删除失败</string>
    <string name="current_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">重复新密码</string>
    <string name="change_password_error_same">新密码与当前密码相同</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="add_token">添加代币</string>
    <string name="add">添加</string>
    <string name="blank_mnemonic">密语为空</string>
    <string name="and">及</string>
    <string name="address">"地址: <xliff:g id="address">%s</xliff:g>"</string>
    <string name="scan_address_qr">扫描地址二维码</string>
    <string name="available_amount">可用余额</string>
    <string name="wait_to_get_gas_price">请等待加载Gas </string>
    <string name="insufficient_balance">余额不足！</string>
    <string name="check_address_error">地址错误！</string>
    <string name="insufficient_token_fee">ETH不足以支付交易手续费！</string>
    <string name="invalidate_balance">请输入正确余额</string>
    <string name="currency">货币单位</string>
    <string name="change_currency_success">修改成功</string>
    <string name="change_currency_failed">修改失败，请重试</string>
    <string name="erc20_token">代币</string>
    <string name="delete_token">删除代币</string>
    <string name="confirm_delete_token">确认要删除代币<xliff:g id="name">%s</xliff:g>吗？</string>
    <string name="manage_password_hind">请输入密码</string>
    <string name="send_out_transaction_prefix">"转账:  <xliff:g id="address">%s</xliff:g>"</string>
    <string name="receipt_transaction_prefix">"收款:  <xliff:g id="address">%s</xliff:g>"</string>
    <string name="receive_amount_prefix">"+<xliff:g id="amount">%s</xliff:g>"</string>
    <string name="send_amount_prefix">"-<xliff:g id="amount">%s</xliff:g>"</string>
    <string name="transfer_fee_prefix">"手续费: <xliff:g id="address">%s</xliff:g>"</string>
    <string name="tx_is_pending">"待确认:  <xliff:g id="address">%s</xliff:g>"</string>
    <string name="transaction_fee_level_slow">慢</string>
    <string name="transaction_fee_level_middle">标准</string>
    <string name="transaction_fee_level_quick">快</string>
    <string name="tx_build_unknown_error">交易创建失败</string>
    <string name="sign_btc_tx_failed">签名交易失败</string>
    <string name="send_out_btc_transaction_success">交易提交成功</string>
    <string name="send_out_btc_transaction_failed">交易提交失败</string>
    <string name="confirm_transaction">转账确认</string>
    <string name="send_confirm_address">"将要发送给: "</string>
    <string name="send_confirm_amount">"金额: "</string>
    <string name="send_confirm_fee">"手续费: "</string>
    <string name="pin_code">密码保护</string>
    <string name="input_pin_code">请输入新密码</string>
    <string name="confirm_pin_code">请确认密码</string>
    <string name="wrong_pin_code">密码错误，请重新输入</string>
    <string name="delete_account_notice">删除钱包前请完成钱包备份</string>
    <string name="use_pin">使用Pin</string>
    <string name="use_fingerprint">请验证指纹</string>
    <string name="cannot_recognize">无法识别指纹，请重试</string>
    <string name="cannot_use_fingerprint">指纹暂时无法使用，请输入Pin密码</string>
    <string name="all_token_has_been_added">所有支持的代币都已经被添加</string>
    <string name="address_item">地址</string>
    <string name="address_name">地址名称</string>
    <string name="address_name_hint">请输入地址名称</string>
    <string name="save_address">保存</string>
    <string name="favorite_address">常用地址</string>
    <string name="edit_favorite_address">编辑</string>
    <string name="add_favorite_address">添加</string>
    <string name="del_favorite_address">删除</string>
    <string name="no_favorite_address">还未添加常用地址</string>
    <string name="choose_coin_type">请选择地址类型</string>
    <string name="confirm_delete_address">确认删除地址？</string>
    <string name="select_address">选择收款地址</string>
    <string name="invalid_address">地址无效、请重新输入</string>
    <string name="favorite_address_save_success">常用地址保存成功！</string>
    <string name="favorite_address_save_failed">常用地址保存失败！</string>
    <string name="favorite_address_update_success">常用地址更新成功！</string>
    <string name="favorite_address_update_failed">常用地址更新失败！</string>
    <string name="favorite_address_delete_success">常用地址删除成功！</string>
    <string name="favorite_address_delete_failed">常用地址删除失败！</string>
    <string name="action_to_favorite_address">请选择操作</string>
    <string name="share">分享</string>
</resources>
