<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="10dip">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/change_password"
        android:textColor="@color/manage_account_textColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/current_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/CreateAccountBtnTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/add_account_btn_bg_selector"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_btn"
            style="@style/CreateAccountBtnTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/add_account_btn_bg_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>
