<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingEnd="@dimen/account_list_item_paddingEnd"
    android:paddingStart="@dimen/account_list_item_paddingEnd">

    <TextView
        android:id="@+id/add_text_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="10dp"
        android:text="@string/address_item"
        android:textColor="@color/address_title_textColor"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_address_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/transfer_to_hint"
            android:textCursorDrawable="@drawable/text_cursor_indicator"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/address_scan"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center_vertical|end"
            android:background="@null"
            android:src="@drawable/wallet_scan" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/indicator_color" />

    <TextView
        android:id="@+id/address_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/coin_type_title"
        android:textColor="@color/address_title_textColor"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/address_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/choose_coin_type"
            android:textCursorDrawable="@null"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/address_type_select"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_gravity="center_vertical|end"
            android:background="@null"
            android:visibility="gone"
            android:src="@drawable/select_type_icon" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/indicator_color" />

    <TextView
        android:id="@+id/add_address_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/address_name"
        android:textColor="@color/address_title_textColor"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/address_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/address_name_hint"
        android:textCursorDrawable="@drawable/text_cursor_indicator"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/indicator_color" />

    <Button
        android:id="@+id/finish_add_btn"
        style="@style/CreateAccountBtnTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/create_account_btn_bg_selector"
        android:enabled="false"
        android:text="@string/save_address" />
</LinearLayout>