<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/tx_detail_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="55dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/tx_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/transaction_confirmed_icon" />
    </FrameLayout>

    <TextView
        android:id="@+id/transaction_detail_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="0.0"
        android:textColor="@color/gray_66" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />

    <TextView
        style="@style/TransactionDetailItemTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_from_address" />

    <TextView
        android:id="@+id/transaction_detail_from"
        style="@style/TransactionDetailItemContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        style="@style/TransactionDetailItemTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_to_address" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TransactionDetailItemContentStyleSub"
            android:id="@+id/transaction_detail_to"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            style="@style/TransactionDetailItemContentStyleSub"
            android:id="@+id/add_to_favorite"
            android:visibility="gone"
            android:text="@string/add_favorite_address"
            android:textColor="@color/gray_d2"
            android:layout_toStartOf="@id/to_icon"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/to_icon"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="3dp"
            android:paddingStart="2dp"
            android:paddingEnd="21dp"
            android:src="@drawable/into_icon" />

    </RelativeLayout>
    <TextView
        style="@style/TransactionDetailItemTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_fee" />

    <TextView
        android:id="@+id/transaction_detail_fax"
        style="@style/TransactionDetailItemContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        style="@style/TransactionDetailItemTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_hash" />

    <TextView
        android:id="@+id/transaction_detail_hash"
        style="@style/TransactionDetailItemContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0" />
</LinearLayout>