<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/balance_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginTop="10dip"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dip"
            android:background="#cacaca" />

        <TextView android:id="@+id/mnemonic_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="15dip"
            android:paddingStart="20dip"
            android:text="@string/mnemonic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#cacaca" />

        <TextView android:id="@+id/key_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="15dip"
            android:paddingStart="20dip"
            android:text="@string/key" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dip"
            android:background="#cacaca" />

        <Button android:id="@+id/delete_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="30dip"/>
    </LinearLayout>
</ScrollView>
